--- a/zadanie-domowe/Zadanie-15878/css/style.css
+++ b/zadanie-domowe/Zadanie-15878/css/style.css
@@ -21,6 +21,9 @@ button {
     border: 1px solid rgb(204, 202, 202) !important;
     box-shadow: none !important;
 }
+div {
+    padding:20px;
+}
 
 
 
