--- a/zadanie-domowe/Zadanie-15878/css/style.css
+++ b/zadanie-domowe/Zadanie-15878/css/style.css
@@ -12,17 +12,26 @@ h1 {
 
 button {
     color:orange;
-        
+    
 }
+
 .select{
-    cursor:pointer;
+    cursor:pointer;  
+   
 }
+
 .border {
     border: 1px solid rgb(204, 202, 202) !important;
     box-shadow: none !important;
 }
 div {
     padding:20px;
+}
+.btn {
+    text-decoration: none;
+}
+.btn :hover, .btn:focus, .btn:active, .btn:active, .open>.dropdown-toggle.btn-primary{
+    text-decoration: underline;
 }
 
 
